# hello_pico_c

./: CMakeLists.txt  README.md
src/: main.c
